# text_rewriter

./: .gitignore  Cargo.toml  DEVELOPMENT.md  PROVIDER_STRATEGY.md  README.md  SYSTEM_DESIGN.md
apps/desktop/: Cargo.toml
apps/desktop/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/platform/: Cargo.toml
crates/platform/src/: lib.rs
crates/providers/: Cargo.toml
crates/providers/src/: lib.rs
crates/secure_store/: Cargo.toml
crates/secure_store/src/: lib.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: lib.rs
