[package]
name = "text-rewriter-providers"
version = "0.1.0"
edition = "2024"

[dependencies]
text-rewriter-core = { path = "../core" }
text-rewriter-secure-store = { path = "../secure_store" }
thiserror = "2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
